# FastTask-APP

./: .gitignore  README.md  index.html  package.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/nsis/: refresh-icons.nsh
src-tauri/src/: lib.rs  main.rs
