[package]
name = "fasttask-app"
version = "0.0.1"
description = "FastTask — Application de bureau"
authors = ["Fast-Panel"]
edition = "2021"
repository = "https://github.com/Fast-Panel/FastTask-APP"
license = "MIT"

[lib]
name = "fasttask_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
