[package]
name = "fasttask-app"
version = "1.0.22"
description = "FastTask — Application de bureau"
authors = ["Fast-Panel"]
edition = "2021"
repository = "https://github.com/Fast-Panel/FastTask-APP"
license = "MIT"

[lib]
name = "fasttask_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-notification = "2"

tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.61", features = ["Win32_UI_Shell"] }

# FastTask n'est qu'un shell webview (charge une URL distante) : l'optimisation
# agressive du binaire n'apporte rien au runtime mais ralentit fortement le build.
# On privilégie donc la VITESSE de compilation (CI multi-plateformes).
[profile.release]
codegen-units = 16   # parallélise la compilation (était 1 = le plus lent)
lto = false          # supprime le link LTO « fat » très lent (était true)
opt-level = "s"
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
